maze.lessons.maze.island.IslandMaze.scala.error
Escaper:16: error: ';' expected but 'else' found.
    } else {
      ^Escaper:23: error: expected class or object definition
def searchLeft() {
^Escaper:45: error: expected class or object definition
def peutAllerNord():Boolean = { //attention : tester peutAllerNord nous oriente vers le Nord //
^Escaper:53: error: expected class or object definition
def getMeOutOfHere() {
^Escaper:79: error: expected class or object definition
def murAGauche():Boolean = {
^Escaper:89: error: Unmatched closing brace '}' ignored here
}
^